fix: remove unnecessary media query for sidebar overlay visibility

--- a/web/src/styles/sidebar.less
+++ b/web/src/styles/sidebar.less
@@ -70,9 +70,6 @@
       color: @color-primary;
     }
 
-    @media (min-width: 1024px) {
-      display: none;
-    }
   }
 
   &__nav {
